# HomeController_ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/App/: main.c  main.h
main/Mid/: serverSession.c  serverSession.h
main/certs/: key.pem  prvkey.pem  servercert.pem  staservercert.pem
